5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4444/executions/1667_2968.log
== TEST (2019-04-16 16:27:55) 
-- CODE:
l=5
s=3.5
r=4
lanche=int(input("digita numero de l:  "))
salgado= int(input("digita numero de s:  "))
refri= int(input("digita numero de r:  "))
preco= (l*lanche) + (s*salgado) + (r*refri)
print(preco)

			  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    lanche=int(input())
ValueError: invalid literal for int() with base 10: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:28:03) 
-- CODE:
l=5
s=3.5
r=4
lanche=int(input("digita numero de l:  "))
salgado= int(input("digita numero de s:  "))
refri= int(input("digita numero de r:  "))
preco= (l*lanche) + (s*salgado) + (r*refri)
print(preco)

			  
-- EXECUTION TIME:
0.137425
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1667/2968/main.py", line 4, in <module>
    lanche=int(input())
ValueError: invalid literal for int() with base 10: 'S'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:28:30) 
-- CODE:
l=5
s=3.5
r=4
lanche=int(input("digita numero de l:  "))
salgado= int(input("digita numero de s:  "))
refri= int(input("digita numero de r:  "))
preco= (l*lanche) + (s*salgado) + (r*refri)
print(round(preco,2))

			  
-- EXECUTION TIME:
0.131734
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1667/2968/main.py", line 4, in <module>
    lanche=int(input())
ValueError: invalid literal for int() with base 10: 'S'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:30:02) 
-- CODE:
l=5
s=3.5
r=4
lanche=int(input("digita numero de l:  "))
salgado= int(input("digita numero de s:  "))
refri= int(input("digita numero de r:  "))
preco= (l*lanche) + (s*salgado) + (r*refri)
print(round(preco,2))
if()

			  
-- ERROR:
File "XXXX", line 9
    if()
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:30:09) 
-- CODE:
l=5
s=3.5
r=4
lanche=int(input("digita numero de l:  "))
salgado= int(input("digita numero de s:  "))
refri= int(input("digita numero de r:  "))
preco= (l*lanche) + (s*salgado) + (r*refri)
print(round(preco,2))


			  
-- EXECUTION TIME:
0.188689
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1667/2968/main.py", line 4, in <module>
    lanche=int(input())
ValueError: invalid literal for int() with base 10: 'S'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:30:12) 
-- CODE:
l=5
s=3.5
r=4
lanche=int(input("digita numero de l:  "))
salgado= int(input("digita numero de s:  "))
refri= int(input("digita numero de r:  "))
preco= (l*lanche) + (s*salgado) + (r*refri)
print(round(preco,2))


			  
-- EXECUTION TIME:
0.187523
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1667/2968/main.py", line 4, in <module>
    lanche=int(input())
ValueError: invalid literal for int() with base 10: 'S'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:40:52) 
-- CODE:
opcao=input("opcao:  ")
qlan(float("quantos lanches:  ")
qsalg=int(float("quantos salgados: ")
qrefri=int("quantos refrigerantes:   ")
if (opcao="l"):
	(5*qlan) + (4*qrefri)
else:
	3.5*qsalg + 4*qrefri

	
				
				
					 
					
-- ERROR:
File "XXXX", line 3
    qsalg=int(float("quantos salgados: ")
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:41:34) 
-- CODE:
opcao=input("opcao:  ")
qlan int("lanche:  ")
qsalg=int(float("quantos salgados: ")
qrefri=int("quantos refrigerantes:   ")
if (opcao="l"):
	(5*qlan) + (4*qrefri)
else:
	3.5*qsalg + 4*qrefri

	
				
				
					 
					
-- ERROR:
File "XXXX", line 2
    qlan int("lanche:  ")
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:42:33) 
-- CODE:
opcao=str(int("opcao:  "))
qlan int("lanche:  ")
qsalg=int(float("quantos salgados: ")
qrefri=int("quantos refrigerantes:   ")
if (opcao="l"):
	(5*qlan) + (4*qrefri)
else:
	3.5*qsalg + 4*qrefri

	
				
				
					 
					
-- ERROR:
File "XXXX", line 2
    qlan int("lanche:  ")
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:42:41) 
-- CODE:
opcao=str(int("opcao:  "))
qlan=int("lanche:  ")
qsalg=int(float("quantos salgados: ")
qrefri=int("quantos refrigerantes:   ")
if (opcao="l"):
	(5*qlan) + (4*qrefri)
else:
	3.5*qsalg + 4*qrefri

	
				
				
					 
					
-- ERROR:
File "XXXX", line 4
    qrefri=int("quantos refrigerantes:   ")
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:43:32) 
-- CODE:
opcao=str(int(input("opcao:  )))
qlan=int(input(  ")
qsalg=int(float("quantos salgados: ")
qrefri=int("quantos refrigerantes:   ")
if (opcao="l"):
	(5*qlan) + (4*qrefri)
else:
	3.5*qsalg + 4*qrefri

	
				
				
					 
					
-- ERROR:
File "XXXX", line 1
    opcao=str(int(input("opcao:  )))
                                   ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:44:39) 
-- CODE:
opcao=str(int(input("opcao:  )))
qlan=int(input(  ")
qsalg=int(float("quantos salgados: ")
qrefri=int("quantos refrigerantes:   ")
valor
if (opcao="l"):
	(5*qlan) + (4*qrefri)
else:
	3.5*qsalg + 4*qrefri
print()
	
				
				
					 
					
-- EXECUTION TIME:
0.172771
-- ERROR:
  File "/home/codebench/codes/1667/2968/main.py", line 1
    opcao=str(int(input("opcao:  )))
                                   ^
SyntaxError: EOL while scanning string literal

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:54:31) 
-- CODE:
if(lance)
-- EXECUTION TIME:
0.20691
-- ERROR:
  File "/home/codebench/codes/1667/2968/main.py", line 1
    if(lance)
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
